--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,7 +10,7 @@
 	--color-card-border: oklch(0.26 0 0);
 	--spacing-dashboard: 0.4rem;
 	--color-input-background: oklch(0.23 0 0);
-	--color-input-border: oklch(0.33 0 0);
+	--color-input-border: var(--color-neutral-800);
 	--color-input-muted: oklch(0.5 0 none);
 	--color-input-error: var(--color-red-300);
 }
