--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,7 @@
 @theme inline {
 	--color-background: var(--background);
 	--color-foreground: var(--foreground);
+	--color-background-base: oklch(0.15 0 0);
 	--color-card-background: oklch(0.2 0 0);
 	--color-card-border: oklch(0.26 0 0);
 	--spacing-dashboard: 0.4rem;
